# quicknote

./: memo.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/migrations/: 001_create_notes.sql
src-tauri/src/: db.rs  lib.rs  shortcuts.rs
src-tauri/src/commands/: mod.rs  notes.rs  window.rs
src/lib/: notes.ts
src/routes/: Launcher.css  Launcher.tsx  NotesList.tsx
