[package]
name = "quicknote"
version = "0.1.0"
description = "QuickNote - quick memo launcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quicknote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: 透過ウィンドウ(tauri.conf.json の macOSPrivateApi: true)に必要
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# sqlx: 非同期SQLライブラリ。runtime-tokio はTauriが使う非同期ランタイムに合わせる指定。
# sqlite で SQLite ドライバを有効化。
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"

